# Thesis

./: 120612_Presentation.pptx  CMakeLists.txt  CellDerivatives.xml  MySample.xml  MySampleGUI.xml  MyThesis.cxx  MyThesis.h  README.md  Thesis_Wiki.docx
Sample2/: CMakeLists.txt
myThesis/: CMakeLists.txt  myThesisToolbar.cxx  myThesisToolbar.h  pqThesis.cxx  pqThesis.h  pqThesis.qrc  pqThesis.ui  satasg.txt
myThesisToolbar/: myThesisToolbar.cxx  myThesisToolbar.h
new/: pqVTKMOABPanel.cxx  pqVTKMOABPanel.h  pqVTKMOABPanel.ui
pqCone/: CMakeLists.txt  pqConePanel.cxx  pqConePanel.h  pqConePanel.qrc  pqConePanel.ui
